# COMP7500---Advanced-Operating-Systems

./: .gitignore
Project 1 - Set Up Linux/: project1.docx  simple.c  tarball.tgz  ~$oject1.docx
Project 1 - Set Up Linux/tarball/: simple.c
Project 2 - pWordCount/: README.md
Project 2 - pWordCount/src/: CMakeLists.txt  main.c  pwc_config.c  pwc_config.h  pwc_counter.c  pwc_counter.h  pwc_counterManager.c  pwc_counterManager.h  pwc_logger.c  pwc_logger.h  pwc_reader.c  pwc_reader.h  pwc_utils.c  pwc_utils.h  pwordcount.c
Project 2 - pWordCount/test/: run_tests.sh  test_main.c
Project 2 - pWordCount/test/performance/: pwc_performance  pwc_performance.c
Project 2 - pWordCount/test/testfiles/: t05_fullname.txt  t6_sentence_wc10.txt  t7_paragraph.txt
Project 3 - AUbatch/config/: aubatch.config
Project 3 - AUbatch/jobs/: job_randsleep10  job_randsleep10.c  job_randsleep5  job_randsleep5.c  job_sleep10  job_sleep10.c  job_sleep5  job_sleep5.c  randsleep10  randsleep5
Project 3 - AUbatch/report-data/: analyzeAubatchWorkload  analyzeAubatchWorkload.c  aubatch_benchmarks.csv
Project 3 - AUbatch/report-data/final/: aubatch_benchmarks_final.csv  graph_benchmarks.ipynb
Project 3 - AUbatch/src/: CMakeLists.txt  aubatch.c  aubatch.h  aubatch_benchmarker.c  aubatch_benchmarker.h  aubatch_cmdparser.c  aubatch_cmdparser.h  aubatch_config.c  aubatch_config.h  aubatch_dispatcher.c  aubatch_dispatcher.h  aubatch_jobs.c  aubatch_jobs.h  aubatch_logger.c  aubatch_logger.h  aubatch_scheduler.c  aubatch_scheduler.h  aubatch_utils.c  aubatch_utils.h
Project 4 - cpm/deliverable/: cpmfsys.c
Project 4 - cpm/src/: cpmRun  cpmfsys.c  fsysdriver.c
p2 deliverable/Project 2 - pWordCount/: README.md
p2 deliverable/Project 2 - pWordCount/config/: pwordcount.config
p2 deliverable/Project 2 - pWordCount/src/: pwc_counter.c  pwc_counterManager.h  pwc_logger.c  pwc_reader.c  pwc_reader.h  pwc_utils.c  pwc_utils.h
(+11 files in other folders)
